# miru

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  README.md  config.toml  coolify.yml  docker-compose.dev.yml  docker-compose.yml  middleware.ts  next.config.ts  nixpacks.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.json  turbo.json
.github/: FUNDING.yml
.sqlx/: query-0cf5984b72b82841f4b03c7f2159fadc7d3adeb125e715411de12e8a49afd0cb.json  query-27ddf68a67e1abb866a7821107553156fd6e2281c56d0b57e1485c3e1c777fae.json  query-29033fe32336d25832dd63d4cbb8faa90851ae9e39981f843124c8d7976b71e6.json  query-2db78ab3fb27e2bb8562c9e6ef347981ba1e7ed701063b0558e8d0d27de2356b.json  query-3296c5186c30eb51201c0590b6f44e99cb2c5e3f81303f83e9c9a2774c106f8c.json  query-39c1e3e1047e3a731eadceb5287b89f53dd54c13f1da309386a5dd9e88a93563.json  query-58eb8ef8a26fc985ec80cf5012c4743424b4c4384639a0d8ce761377f570b945.json  query-5f55d848d837c839ea0938967958c3a6e713606374522e0033db7ff3ed9c8d8d.json  query-5fc9dfef2e1d244b48a53be7f181603dabc718aba3f27e5b2fa5c86a50bfab53.json  (+18 more)
app/: layout.tsx  page.tsx
apps/: README.md
apps/monitor/: Cargo.toml  Dockerfile  package.json
apps/monitor/src/: lib.rs  main.rs
apps/monitor/src/config/: mod.rs  watcher.rs
apps/monitor/src/cron/: clear.rs  create.rs  health.rs  mod.rs  remove.rs  update.rs  worker.rs
apps/monitor/src/cron/jobs/: create.rs  mod.rs  remove.rs  update.rs  worker.rs
apps/monitor/src/cron/manager/: README.md  async_job.rs  async_scheduler.rs  intervals.rs  job.rs  job_schedule.rs  mod.rs  scheduler.rs  sync_job.rs
apps/monitor/src/email/: mod.rs  paths.rs  send.rs
apps/monitor/src/events/: create.rs  mod.rs  update.rs
apps/monitor/src/monitors/: create.rs  health.rs  mod.rs  update.rs
apps/monitor/src/notifs/discord/: get_url.rs  mod.rs  send.rs
apps/monitor/src/ping/: http.rs  mod.rs  tcp.rs
apps/monitor/src/routes/: config.rs  hello.rs  mod.rs  not_found.rs  ping.rs  registry.rs  test.rs
apps/monitor/src/routes/core/: hello.rs  mod.rs  ping.rs  registry.rs  test.rs
apps/monitor/src/routes/cron/: create.rs  mod.rs  remove.rs  update.rs
apps/monitor/src/routes/cron/events/: create.rs  mod.rs  update.rs
apps/monitor/src/routes/cron/monitors/: create.rs  mod.rs  remove.rs  update.rs
(+507 files in other folders)
