[package]
name = "monitor"
version = "0.1.0"
description = "The monitoring service."
authors = ["tygrdev", "nord-studio"]
edition = "2021"

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1.43.0", features = ["full"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid", "chrono", "json"] }
chrono = "0.4.39"
serde = "1.0.217"
serde_json = "1.0.138"
anyhow = "1.0.95"
futures = "0.3.31"
dotenvy = "0.15.7"
pretty_env_logger = "0.5.0"
log = "0.4.25"
once_cell = "1.20.3"
reqwest = "0.12.12"
actix-cors = "0.7.0"
rand = "0.9.0"
tokio-cron-scheduler = "0.13.0"
uuid = { version = "1.13.1", features = ["v4"] }
openssl = "0.10.71"
