[package]
name = "monitor"
version = "0.3.3"
description = "The monitoring service."
authors = ["tygrdev", "nord-studio"]
edition = "2021"

[dependencies]
actix-web = "4.10.2"
tokio = { version = "1.44.2", features = ["full"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid", "chrono", "json"] }
chrono = "0.4.40"
serde = "1.0.219"
serde_json = "1.0.140"
anyhow = "1.0.98"
futures = "0.3.31"
dotenvy = "0.15.7"
pretty_env_logger = "0.5.0"
log = "0.4.27"
once_cell = "1.21.3"
reqwest = "0.12.15"
actix-cors = "0.7.1"
rand = "0.9.1"
tokio-cron-scheduler = "0.13.0"
uuid = { version = "1.16.0", features = ["v4"] }
openssl = "0.10.72"
