[package]
name = "monitor"
version = "0.4.0"
description = "The monitoring service."
authors = ["tygrdev", "nord-studio"]
edition = "2021"

[dependencies]
actix-web = "4.11.0"
tokio = { version = "1.46.0", features = ["full"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid", "chrono", "json"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dotenvy = "0.15.7"
pretty_env_logger = "0.5.0"
log = "0.4.27"
once_cell = "1.21.3"
reqwest = {version = "0.12.22", features = ["rustls-tls"] }
actix-cors = "0.7.1"
rand = "0.9.1"
tokio-cron-scheduler = "0.13.0"
uuid = { version = "1.17.0", features = ["v4"] }
openssl = "0.10.73"
toml = "0.8.23"
lettre = "0.11.17"
regex = "1.11.1"
notify = "8.1.0"
futures = "0.3.31"
